--- a/Unity Project/Legendary 3D Selfie App/Legendary 3D Selfie App.csproj
+++ b/Unity Project/Legendary 3D Selfie App/Legendary 3D Selfie App.csproj
@@ -309,6 +309,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\PhoneCamera.cs" />
     <Compile Include="Assets\Vuforia\Scripts\DefaultInitializationErrorHandler.cs" />
     <Compile Include="Assets\Vuforia\Scripts\DefaultTrackableEventHandler.cs" />
