Saving from camera stream to temp location works
Captures a .png from the selectedCamera stream and saves it to a temp location. Also, cleaned up one of the other scripts that had a bunch of duplicate and unessesary code.

--- a/Unity Project/Legendary 3D Selfie App/Legendary 3D Selfie App.csproj
+++ b/Unity Project/Legendary 3D Selfie App/Legendary 3D Selfie App.csproj
@@ -309,6 +309,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ManagerScript.cs" />
     <Compile Include="Assets\Scripts\CapturePic.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\PhoneCamera.cs" />
